--- a/addtask/addtask.css
+++ b/addtask/addtask.css
@@ -101,6 +101,10 @@ form {
     background-color: rgb(248, 248, 248);
 }
 
+.button-box{
+    display: flex;
+    align-items: center;
+}
 
 
 
@@ -544,6 +548,11 @@ form {
     }
 }
 
+.addSubtask-button{
+    border-radius: 10px;
+    width: 10vw;
+}
+
 
 
 @media only screen and (max-width: 420px) {
@@ -600,7 +609,8 @@ form {
     }
 
     .addSubtask-button{
-        width: 90vw;
+        border-radius: 10px;
+        width: 20vw;
     }
 
     .task-description input {
