--- a/board/board.css
+++ b/board/board.css
@@ -788,10 +788,13 @@ body::-webkit-scrollbar-thumb {
     object-fit: cover;
 }
 
+
 /*/--------------------------- MEDIA QUERRYS -----------------------------/*/
 @media only screen and (max-width: 1900px) {
     .addNewTaskBackground {
-        left: 58%;
+    height: 75vh;
+    padding: 60px;
+    padding-top: 13px;
     }
 }
 
@@ -824,8 +827,6 @@ body::-webkit-scrollbar-thumb {
     .addNewTaskBackground {
         left: 65%;
         padding: 30px;
-        overflow: auto;
-        height: 65vh;
     }
 }
 
@@ -941,9 +942,16 @@ body::-webkit-scrollbar-thumb {
 
 @media only screen and (max-width: 530px) {
 
+    #addNewTaskClose {
+        justify-content: center;
+    }
+
     .addNewTaskBackground {
-        left: 50%;
-        height: 100%;
+        scroll-behavior: smooth;
+        overflow: auto;
+        height: 75vh;
+        width: 100vw;
+    
     }
 
     .addNewTaskBackground::-webkit-scrollbar {
