--- a/addtask/addtask.css
+++ b/addtask/addtask.css
@@ -21,7 +21,7 @@ body::-webkit-scrollbar-thumb {
 
 .addTask-container {
     margin-left: 200px;
-    margin-top: 200px;
+    margin-top: 100px;
     font-size: 22px;
 }
 
@@ -623,4 +623,10 @@ form {
     .task-description input {
         min-width: unset;
     }
+}
+
+@media only screen and (min-width: 801px) {
+    .addTask-content {
+        height: 63vh;
+}
 }
