--- a/addtask/addtask.css
+++ b/addtask/addtask.css
@@ -41,7 +41,7 @@ body::-webkit-scrollbar-thumb {
     display: flex;
     scroll-behavior: smooth;
     overflow: auto;
-    height: 60vh;
+    height: 75vh;
 }
 
 .addTask-leftSide {
@@ -422,11 +422,16 @@ form {
 }
 
 /*/--------------- MEDIA QUERRY -------------------------/*/
-
-@media only screen and (max-width: 1500px) {
+@media only screen and (min-width: 1000px) {
     form {
-        display: unset !important;
+        gap: 50px
     }
+
+.addNewTaskBackground {
+left: 50%;
+}
+}
+@media only screen and (max-width: 1500px) {
 
     form .line {
         display: none;
@@ -461,6 +466,9 @@ form {
 }
 
 @media only screen and (max-width: 1000px) {
+    form {
+        display: unset !important;
+    }
     #successMessage{
         left: 65%;
     }
@@ -625,8 +633,3 @@ form {
     }
 }
 
-@media only screen and (min-width: 801px) {
-    .addTask-content {
-        height: 63vh;
-}
-}
